--- a/css/style.css
+++ b/css/style.css
@@ -4,13 +4,85 @@
     box-sizing: border-box;
 }
 
+body {
+    font-family: 'Poppins', sans-serif;
+}
 
+header {
+    background-image: url(/img/jumbo.png);
+    background-size: contain;
+    height: 694px;
+
+}
+.db{
+    padding: 30px;
+}
+
+/*buttons*/
+
+.butt {
+    
+    padding: 9px 15px;
+    border-radius: 20px;
+    border: 0;
+    font-family: 'Poppins', sans-serif;
+    font-weight: 500;
+}
+
+.accedi {
+    margin-left: 100px;
+    background-color: white;
+    font-size: 15px;
+    
+}
+.mac{
+
+    font-size: 20px;
+
+}
+.brow{
+    color: white;
+    background-color: #23272A;
+
+}
+
+/*buttons*/
+
+.list {
+    color: white;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    justify-content: space-evenly;
+}
+
+a {
+    color: white;
+    text-decoration: none;
+
+}
+
+h1 {
+    color: white;
+    padding-top: 70px;
+    font-size: 40px;
+}
+
+p {
+    color: white;
+}
+
+.box {
+    max-width: 45%;
+    text-align: center;
+}
 
 .banner {
 
     width: 80%;
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
     margin: auto;
 }
@@ -19,23 +91,24 @@ section {
     height: 600px;
     display: flex;
     align-items: center;
-   
+
 }
+
 big-section {
     height: 1000px;
     display: flex;
     align-items: center;
-   
+
 }
 
 
 .container {
     width: 80%;
     max-width: 1170px;
-    
+
     margin: auto;
     padding-top: 50px;
-    
+
 }
 
 .container-2 {
@@ -43,24 +116,25 @@ big-section {
     max-width: 1170px;
     height: 100%;
     margin: auto;
-   
-    
+
+
 }
 
-footer{
+footer {
     background-color: rgb(36, 36, 187);
     margin-top: 50px;
 }
 
 .row {
-    
+
     display: flex;
     justify-content: space-around;
     align-items: center;
 
 }
+
 .rowb {
-    
+
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -68,7 +142,7 @@ footer{
 }
 
 .rows {
-    
+
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -82,6 +156,7 @@ footer{
     height: 60%;
     padding-top: 40px;
 }
+
 .cols-2 {
     width: calc(100%/12*2);
     height: 60%;
@@ -102,11 +177,11 @@ footer{
 
 }
 
-.rowb .col-2{
+.rowb .col-2 {
     height: 80%;
 }
 
-.rowb .col-4{
+.rowb .col-4 {
     height: 80%;
 }
 
@@ -119,7 +194,7 @@ footer{
 }
 
 .mainh {
-    
+
     display: flex;
     justify-content: center;
     align-items: center;
@@ -147,17 +222,22 @@ footer{
     background-color: gray;
     height: 400px;
 }
+
 .debug .rowb {
     background-color: gray;
     height: 500px;
 }
+
 .debug .rows {
     background-color: rgb(73, 73, 73);
     height: 50px;
 }
 
 
-.debug .col-2, .debug .cols-2, .debug .col-4,.debug .col-8  {
+.debug .col-2,
+.debug .cols-2,
+.debug .col-4,
+.debug .col-8 {
     background-color: salmon;
     border: 1px dashed black;
 }
