--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@
 
 body {
     font-family: 'Poppins', sans-serif;
+    color: #23272A;
 }
 
 header {
@@ -14,14 +15,15 @@ header {
     height: 694px;
 
 }
-
-section{
-    background-image: url(/img/wave.svg), color beige;
-}
-
 .logo:hover{
     background-color: #4271E7;
 }
+
+section{
+    margin-top: 150px;
+    
+}
+
 
 
 /*buttons*/
@@ -75,6 +77,19 @@ section{
     background-color: white;
 }
 
+.lily{
+    border-radius: 26px;
+    font-size: 22px;
+    
+    color: white;
+    background-color: #8EA1E1;
+}
+.lily:hover{
+    color: #8EA1E1;
+    background-color: white;
+    border: 2px solid #8EA1E1 ;
+}
+
 /*buttons*/
 
 .list {
@@ -97,11 +112,48 @@ h1 {
     padding-top: 70px;
     font-size: 40px;
 }
+h2{
+    font-size: 50px;
+    font-weight: 700;
+}
+h3{
+    background-image: url(/img/stars.svg);
+    background-size: cover;
+    width: 700px;
+    height: 200px;
+    font-size: 30px;
+    font-weight: 700;
+}
+.container-2 {
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 
-p {
-    color: white;
+}
+.container h2{
+    inline-size: 420px;
+
+}
+.container-2 h2{
+    margin-top:  150px; 
+
 }
 
+.he{
+    color: white;
+}
+p{
+    padding-top: 15px;
+    font-size: 18px;
+    font-weight: 500; 
+}
+
+.ma{
+    inline-size: 350px;
+
+
+}
 .box {
     max-width: 45%;
     text-align: center;
@@ -158,7 +210,7 @@ footer {
 
     display: flex;
     justify-content: space-around;
-    align-items: center;
+    align-items: flex-start;
 
 }
 
